# vggt

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE.txt  README.md  demo_gradio.py  demo_viser.py  docker-build.sh  docker-compose.yml  docker-push.sh  docker-run.sh  pyproject.toml  requirements.txt  requirements_demo.txt  vggt_process.py  vggt_process.sh  vggt_to_colmap.py  visual_util.py
docs/: package.md
vggt/heads/: camera_head.py  dpt_head.py  head_act.py  track_head.py  utils.py
vggt/heads/track_modules/: blocks.py  modules.py  utils.py
vggt/layers/: attention.py  block.py  layer_scale.py  patch_embed.py  swiglu_ffn.py  vision_transformer.py
vggt/models/: aggregator.py  vggt.py
vggt/utils/: geometry.py  load_fn.py  pose_enc.py  rotation.py
